# bot-ferme

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
init_db/: init.sql
src/backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 9cfb7a8e24b1_create_users_and_admin_table.py
src/backend/api/: __init__.py
src/backend/api/v1/: __init__.py
src/backend/core/: config.py
src/backend/database/: __init__.py  db_helper.py  metadata.py
src/backend/database/mixins/: __init__.py  id_uuid.py
src/backend/deploy/charts/bot-ferme/: Chart.yaml  values.yaml
src/backend/deploy/charts/bot-ferme/templates/: _helpers.tpl  backend.yaml  db.yaml  hpa.yaml  migrations.yaml  tests-job.yaml
src/backend/features/: __init__.py
src/backend/features/admins/: crud.py  router.py  services.py
src/backend/features/admins/dependencies/: auth.py
src/backend/features/admins/models/: admin.py
src/backend/features/admins/schemas/: schemas.py
src/backend/features/health/: router.py
src/backend/features/users/: crud.py  router.py  services.py
src/backend/features/users/models/: users.py
src/backend/features/users/schemas/: enums.py  schemas.py
src/backend/shared/exceptions/: __init__.py  auth.py  base.py  existence.py  rules.py
src/backend/tests/: conftest.py  test_admin_crud.py  test_admin_service.py  test_auth_admin.py  test_user_crud.py  test_user_router.py  test_user_service.py  test_utills.py
src/backend/utils/: __init__.py  jwt_auth.py  security.py
